<resources>
    <string name="app_name">Survey Application</string>
    <string name="odyssey_survey_form">Odyssey-2023</string>
    <string name="greetings">Hope you had a great Odyssey!!!!</string>
    <string name="feedback_string">We would love to hear feedback about your experience.</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="input_name">Enter your name</string>
    <string name="odyssey_logo">odyssey logo</string>
    <string name="enter_your_role">Enter your Role</string>
    <string name="submit">SUBMIT</string>
    <string name="what_all_events_did_you_attend_in_odyssey_23">What all events did you attend in Odyssey\'23?</string>
    <string name="music">Music</string>
    <string name="dance">Dance</string>
    <string name="play">Play</string>
    <string name="fashion">Fashion</string>
    <string name="food">Food</string>
    <string name="clear">CLEAR</string>
    <string name="hello">These are the ratings given by you:</string>
    <string name="thankyou">Thank You for your response.</string>
</resources>