<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".EventsList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/tv_started_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/odyssey_survey_form"
            android:textColor="#FDD235"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="30dp"
            android:layout_marginStart="350dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/odyssey_logo"
            android:src="@drawable/odyssey_logo"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <TextView
        android:id="@+id/askingEventsAttended"
        android:layout_width="295dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/what_all_events_did_you_attend_in_odyssey_23"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/music"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_marginTop="30dp"
            android:text="@string/music"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="normal" />

        <RatingBar
            android:id="@+id/ratingBarMusic"
            android:layout_width="235dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:numStars="5"
            android:outlineProvider="@color/white"
            android:progressBackgroundTint="#756666"
            android:rating="0"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:visibility="gone"
            android:stepSize="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/dance"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:text="@string/dance"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="normal" />

        <RatingBar
            android:id="@+id/ratingBarDance"
            android:layout_width="242dp"
            android:layout_height="44dp"
            android:layout_margin="0dp"
            android:numStars="5"
            android:outlineProvider="@color/white"
            android:progressBackgroundTint="#756666"
            android:rating="0"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:visibility="gone"
            android:stepSize="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/play"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:text="@string/play"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="normal" />

        <RatingBar
            android:id="@+id/ratingBarPlay"
            android:layout_width="242dp"
            android:layout_height="44dp"
            android:layout_margin="0dp"
            android:numStars="5"
            android:outlineProvider="@color/white"
            android:progressBackgroundTint="#756666"
            android:rating="0"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:visibility="gone"
            android:stepSize="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/fashion"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:text="@string/fashion"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="normal" />

        <RatingBar
            android:id="@+id/ratingBarFashion"
            android:layout_width="242dp"
            android:layout_height="44dp"
            android:layout_margin="0dp"
            android:numStars="5"
            android:outlineProvider="@color/white"
            android:progressBackgroundTint="#756666"
            android:rating="0"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:visibility="gone"
            android:stepSize="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/food"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:text="@string/food"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="normal" />

        <RatingBar
            android:id="@+id/ratingBarFood"
            android:layout_width="242dp"
            android:layout_height="44dp"
            android:layout_margin="0dp"
            android:numStars="5"
            android:outlineProvider="@color/white"
            android:progressBackgroundTint="#756666"
            android:rating="0"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:visibility="gone"
            android:stepSize="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="346dp"
        android:layout_height="62dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clearButton"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_marginStart="0dp"
            android:text="@string/clear" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:layout_marginStart="80dp"
            android:text="@string/submit" />

    </LinearLayout>


</LinearLayout>