<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:padding="20dp"
    tools:context=".FinalPage">

    <TextView
        android:id="@+id/tv_started_title"
        android:layout_width="212dp"
        android:layout_height="49dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="615dp"
        android:text="@string/odyssey_survey_form"
        android:textColor="#FDD235"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="556dp"
        android:contentDescription="@string/odyssey_logo"
        android:src="@drawable/odyssey_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="229dp"
        android:layout_height="180dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="275dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/hello"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="272dp"
        android:layout_height="54dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="77dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/thankyou"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>